--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Andrey7287/empty.git"
+    "url": "git+https://github.com/Andrey7287/advokat.git"
   },
   "keywords": [
     "-"
@@ -16,11 +16,10 @@
   "author": "Alekseev.A",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Andrey7287/empty/issues"
+    "url": "https://github.com/Andrey7287/advokat/issues"
   },
-  "homepage": "https://github.com/Andrey7287/empty#readme",
+  "homepage": "/",
   "devDependencies": {
-    "bootstrap-sass": "^3.3.6",
     "browser-sync": "^2.13.0",
     "gulp": "^3.9.1",
     "jquery": "^3.0.0",
