--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   "devDependencies": {
     "browser-sync": "^2.13.0",
     "gulp": "^3.9.1",
-    "jquery": "^3.0.0",
+    "jquery": "2.2.4",
     "jquery-fancybox": "^3.0.0",
-    "jquery-slimscroll": "^1.3.8",
     "jquery.formstyler": "^1.7.5-repackage",
+    "malihu-custom-scrollbar-plugin": "^3.1.5",
     "normalize.scss": "^0.1.0",
     "requirejs": "^2.2.0",
     "slick-carousel": "^1.6.0"
